<resources>
    <string name="app_name">Big 5 Test</string>

    <string name="article_title">Big Five Personality</string>

    <string name="article_subtitle1"><b>Openness to Experience</b></string>
    <string name="article_subtitle2"><b>Conscientiousness</b></string>
    <string name="article_subtitle3"><b>Extroversion</b></string>
    <string name="article_subtitle4"><b>Agreeableness</b></string>
    <string name="article_subtitle5"><b>Neuroticism</b></string>

    <string name="article_text1">Individu yang memiliki nilai <i>Openness to Experience</i> yang tinggi dicirikan sebagai individu yang imajinatif, ingin tahu, dan terbuka terhadap ide dan pengalaman baru. Mereka cenderung memiliki rasa ingin tahu secara intelektual dan senang mengeksplorasi konsep dan ide baru. Mereka mungkin juga menunjukkan preferensi terhadap kreativitas dan estetika. \n \nPenelitian telah menunjukkan bahwa <i>Openness to Experience</i> dikaitkan dengan berbagai hasil, termasuk kreativitas, inovasi, dan kompetensi budaya. Misalnya, individu yang mempunyai nilai <i>Openness to Experience</i> yang tinggi cenderung lebih kreatif dan inovatif, dan mungkin lebih sukses dalam karier yang memerlukan keterampilan tersebut. Selain itu, mereka cenderung lebih berpikiran terbuka dan menerima beragam budaya dan perspektif.</string>

    <string name="article_text2">Individu yang memiliki skor tinggi dalam <i>Conscientiousness</i> dicirikan sebagai individu yang dapat diandalkan, pekerja keras, dan efisien. Mereka cenderung terorganisir dengan baik dan bertanggung jawab, serta termotivasi untuk mencapai tujuan mereka. Mereka mungkin juga menunjukkan rasa disiplin diri dan ketekunan yang kuat. \n\nPenelitian telah menunjukkan bahwa <i>Conscientiousness</i> dikaitkan dengan berbagai hasil, termasuk prestasi akademis dan pekerjaan, perilaku kesehatan, dan umur panjang. Misalnya saja, individu yang memiliki nilai tinggi dalam hal <i>Conscientiousness</i> cenderung memiliki prestasi akademis dan pekerjaan yang lebih baik, serta tingkat ketidakhadiran dan keluar masuk yang lebih rendah. Mereka juga cenderung melakukan perilaku yang meningkatkan kesehatan, seperti berolahraga secara teratur dan menjaga pola makan yang sehat. Selain itu, mereka cenderung hidup lebih lama dibandingkan individu yang memiliki nilai <i>Conscientiousness</i> yang rendah.</string>

    <string name="article_text3"><i>Extraversion</i> biasanya ditandai dengan kecenderungan individu untuk mencari interaksi dan rangsangan sosial, serta tingkat antusiasme dan ketegasan mereka dalam situasi sosial. Individu yang mempunyai skor tinggi pada dimensi ini cenderung mudah bergaul, mudah bergaul, dan banyak bicara. Mereka senang berada di dekat orang lain dan mencari situasi sosial. Mereka sering digambarkan memiliki tingkat energi, antusiasme, dan ketegasan yang tinggi. Mereka juga lebih cenderung melakukan perilaku berisiko, seperti berpesta, minum-minum, atau bentuk-bentuk kesenangan lainnya.\n\nPenelitian telah menunjukkan bahwa <i>Extraversion</i> dikaitkan dengan berbagai hasil, termasuk kinerja pekerjaan, dukungan sosial, dan kesejahteraan. Misalnya, individu yang mendapat nilai tinggi dalam <i>Extraversion</i> cenderung lebih sukses dalam karier yang melibatkan interaksi sosial dan komunikasi. Mereka mungkin juga memiliki lebih banyak jaringan dukungan sosial dan mengalami tingkat kesejahteraan subjektif yang lebih tinggi.</string>

    <string name="article_text4">Individu yang memiliki skor tinggi dalam aspek <i>Agreeableness</i> ditandai dengan sifat hangat, baik hati, dan penuh perhatian. Mereka cenderung kooperatif dan termotivasi untuk menjaga hubungan sosial yang harmonis. Mereka mungkin juga memiliki rasa empati dan kepedulian yang kuat terhadap kesejahteraan orang lain.\n\nPenelitian telah menunjukkan bahwa <i>Agreeableness</i> dikaitkan dengan berbagai hasil, termasuk hubungan interpersonal, kinerja, dan kesehatan mental. Misalnya, individu yang memiliki skor tinggi dalam hal <i>Agreeableness</i> cenderung memiliki hubungan yang lebih positif dan suportif dengan orang lain. Mereka juga mungkin lebih sukses dalam karier yang membutuhkan kerja tim dan kolaborasi. Selain itu, mereka cenderung memiliki hasil kesehatan mental yang lebih baik, seperti tingkat depresi dan kecemasan yang lebih rendah. Namun, penting untuk dicatat bahwa tingkat kesesuaian yang terlalu tinggi juga dapat menimbulkan konsekuensi negatif, seperti terlalu patuh atau kurang asertif.</string>

    <string name="article_text5">Individu yang memiliki skor tinggi dalam <i>Emotional Stability</i> dicirikan sebagai individu yang memiliki ketahanan emosional, tenang, dan mudah marah. Mereka cenderung mengalami lebih sedikit emosi negatif dan lebih mampu mengatasi stres dan kesulitan. Mereka juga lebih cenderung menunjukkan emosi positif, seperti kebahagiaan, kepuasan, dan antusiasme.\n\nPenelitian telah menunjukkan bahwa <i>Emotional Stability</i> dikaitkan dengan berbagai hasil, termasuk kesehatan mental, kesehatan fisik, dan hubungan interpersonal. Misalnya, individu yang memiliki skor <i>Emotional Stability</i> yang tinggi cenderung memiliki hasil kesehatan mental yang lebih baik, seperti tingkat depresi dan kecemasan yang lebih rendah. Mereka mungkin juga mempunyai hasil kesehatan fisik yang lebih baik, seperti tingkat penyakit kardiovaskular yang lebih rendah. Selain itu, mereka cenderung memiliki hubungan yang lebih stabil dan suportif dengan orang lain.</string>
</resources>