<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KeteranganActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- openness -->
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/factor1"/>

            <TextView
                android:id="@+id/article_subheading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_heading"
                android:layout_marginBottom="10dp"
                android:text="@string/article_subtitle1"
                android:background="@drawable/rounded_sub1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article1"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/article_text1" />


            <!-- conscientiousness -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/factor2"/>

            <TextView
                android:id="@+id/article_subheading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/article_subtitle2"
                android:background="@drawable/rounded_sub2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article2"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/article_text2" />

            <!-- extroversion -->
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/factor3"/>

            <TextView
                android:id="@+id/article_subheading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/article_subtitle3"
                android:background="@drawable/rounded_sub3"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article3"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/article_text3" />

            <!-- agreeableness -->
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/factor4"/>

            <TextView
                android:id="@+id/article_subheading4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/article_subtitle4"
                android:background="@drawable/rounded_sub4"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article4"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/article_text4" />

            <!-- emotional stability -->
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/factor5"/>

            <TextView
                android:id="@+id/article_subheading5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/article_subtitle5"
                android:background="@drawable/rounded_sub5"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article5"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/article_text5" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>